--- a/loginApp/src/app/pages/registro/registro.component.html
+++ b/loginApp/src/app/pages/registro/registro.component.html
@@ -10,7 +10,8 @@
                         Crear nueva cuenta
                     </span>
 
-                    <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                    <span *ngIf="f.submitted && f.controls['email'].errors"
+                      class="text-danger animated fadeIn">El correo es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="email"
@@ -23,8 +24,9 @@
                         <span class="focus-input100"></span>
                     </div>
 
-                    <!-- <span class="text-danger">El nombre es obligatorio</span> -->
-                    <div class="wrap-input100 m-b-16">
+                    <span *ngIf="f.submitted && f.controls['nombre'].errors"
+                    class="text-danger animated fadeIn">El nombre es obligatorio</span>
+                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="text"
                                name="nombre"
@@ -36,8 +38,9 @@
                         <span class="focus-input100"></span>
                     </div>
 
-                    <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
-                    <div class="wrap-input100 m-b-16" data-validate = "Password is required">
+                    <span *ngIf="f.submitted && f.controls['password'].errors"
+                    class="text-danger animated fadeIn">al menos 6 caracteres </span>
+                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="password"
                                name="passward"
