pantalla de login y sus validaciones
video 9

--- a/loginApp/src/app/pages/registro/registro.component.html
+++ b/loginApp/src/app/pages/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div class="limiter">
+<div class="limiter nimated fadeInRigth">
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
 
@@ -43,7 +43,7 @@
                      <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="password"
-                               name="passward"
+                               name="password"
                                [(ngModel)]="usuario.password"
                                minlength="6"
                                required
@@ -60,7 +60,7 @@
                         </div>
 
                         <div>
-                            <a routerLink="/registro" class="txt1">
+                            <a routerLink="/login" class="txt1">
                                 ¿Ya tienes cuenta? / Ingresar
                             </a>
                         </div>
